--- a/style.css
+++ b/style.css
@@ -1,1 +1,61 @@
+html,body { min-width: 300px;
+    background-color: #fff;
+    color: #000;
+    font-family: 'Open Sans', Arial, sans-serif;}
 
+code { display: block;
+text-align: left;
+position: relative;
+background-color: #828e84;
+padding: 20px;
+margin: 10px 10px;
+line-height: 1;
+border-radius: 10px;}
+
+#navbar { position: fixed;
+  border-color: #000;
+  min-width: 300px;
+  width: 300px;
+  height: 100%;
+  border-right: solid;}
+
+#navbar a { text-decoration: none;
+    display: block;
+    color: #000;
+    padding: 10px 28px;}
+
+header { color: #000;
+ margin: 12px;
+ text-align: center;
+ font-size: 30px;
+ font-weight: thin;}
+
+#navbar ul { height: 90%;
+     padding: 0;
+     overflow-y: auto;}
+
+#navbar li { color: #000;
+     border-top: 1.3px solid #000;
+     position: relative;
+     width: 100%;}
+
+@media only screen and (max-width: 400px) {
+#main-doc {margin-left: -5px;}
+code { margin-left: -20px;
+padding: 20px;
+padding-left: 10px;
+padding-right: 40px
+width: 100%;}}
+
+@media only screen and (max-width: 800px) {
+#main-doc { position: relative;
+margin-top: 300px;}
+#navbar ul { border: 1px solid #000;
+     height: 210px;}
+#navbar { background-color: #fff;
+  position: absolute;
+  max-height: 300px;
+  top: 0;
+  width: 100%;
+  border: none;
+  z-index: 1;}}
