--- a/style.css
+++ b/style.css
@@ -39,23 +39,52 @@ header { color: #000;
      position: relative;
      width: 100%;}
 
-@media only screen and (max-width: 400px) {
-#main-doc {margin-left: -5px;}
-code { margin-left: -20px;
+/*@media only screen and (max-width: 400px) {
+#main-doc {margin-left: -5px;}*/
+/*code { margin-left: -20px;
 padding: 20px;
 padding-left: 10px;
-padding-right: 40px
-width: 100%;}}
+padding-right: 40px;
+width: 100%;}*/
 
-@media only screen and (max-width: 800px) {
-#main-doc { position: relative;
-margin-top: 300px;}
-#navbar ul { border: 1px solid #000;
-     height: 210px;}
-#navbar { background-color: #fff;
-  position: absolute;
-  max-height: 300px;
-  top: 0;
-  width: 100%;
-  border: none;
-  z-index: 1;}}
+  section {
+     display: block;
+ }
+ 
+ header {
+     display: block;
+     text-align: left;
+     font-size: 1.8em;
+     font-weight:bold ;
+     
+ }
+ /*On screens that are 600px or less, set the background color to olive */
+
+
+  @media only screen and (max-width: 820px) {
+     #navbar ul { border: 1px solid;
+                         height: 210px;}
+   
+     #navbar { background-color: white;
+                     position: absolute;
+                     padding: 0;
+                     margin: 0;
+                     width: 100%;
+                     max-height: 275px;
+                     border: none;
+                     z-index: 1;
+                     top: 0;}
+   
+     #main-doc { margin-left: 0px;
+                         position: relative;
+                         margin-top: 265px;}}
+   
+   @media only screen and (max-width: 400px) {
+   code { margin-left: -15px;
+             min-width: 220px;
+              width: 100%;
+              padding: 15px;
+              padding-left: 10px;
+              padding-right: 45px;}
+     #main-doc { margin-left: -5px;}}
+   
