--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ header { color: #000;
      border-top: 1.3px solid #000;
      position: relative;
      width: 100%;}
-
+.main-section{
+    margin-left: 350px;
+}
 /*@media only screen and (max-width: 400px) {
 #main-doc {margin-left: -5px;}*/
 /*code { margin-left: -20px;
